...
    <string name="app_name">BMI</string>
    <string name="double_zero">0.0</string>
    <string name="string_empty">""</string>
    <string name="default_content_description_image">There should be image</string>

    <!--main activity-->
    <string name="main_button_count_text">Count</string>
    <string name="main_text_result_bmi">Your BMI :</string>
    <string name="main_text_input_height">Input your height</string>
    <string name="main_text_input_weight">Input your weight</string>
    <string name="main_text_weight_first_unit">Weight [kg] :</string>
    <string name="main_text_height_first_unit">Height [cm] :</string>
    <string name="main_text_weight_second_unit">Weight [lb]:</string>
...
